tests/NormalTests/paczka1/fuzzy1/53962507.err
Error in line 4: A848 A848 43,1
Error in line 13: 6hIAY S125 -1,0
Error in line 15: 1eclPyC1 S599 64,8
Error in line 17: 1eclPyC1 S125 18,6
Error in line 31: 7vf S599 51,8
Error in line 12: 6hIAY S125 49,2
Error in line 28: wUsZavGMz A848 86,2
